option('SPDLOG_COMPILED_LIB', type : 'boolean', value : false, description : 'Compile library')
option('SPDLOG_BUILD_EXAMPLE', type : 'boolean', value : false, description : 'Build example')
option('SPDLOG_BUILD_TESTS', type : 'boolean', value : false, description : 'Build tests')
option('SPDLOG_BUILD_BENCH', type : 'boolean', value : false, description : 'Build benchmarks (Requires https://github.com/google/benchmark.git to be installed)')
option('SPDLOG_SANITIZE_ADDRESS', type : 'boolean', value : false, description : 'Enable address sanitizer in tests')
option('SPDLOG_FMT_EXTERNAL', type : 'boolean', value : false, description : 'Use external fmt library instead of bundled')
option('SPDLOG_NO_EXCEPTIONS', type : 'boolean', value : false, description : 'Compile with -fno-exceptions. Call abort() on any spdlog exceptions')
option('SPDLOG_PREVENT_CHILD_FD', type : 'boolean', value : false, description : 'Prevent from child processes to inherit log file descriptors')
option('SPDLOG_NO_THREAD_ID', type : 'boolean', value : false, description : 'prevent spdlog from querying the thread id on each log call if thread id is not needed')
option('SPDLOG_NO_TLS', type : 'boolean', value : false, description : 'prevent spdlog from using thread local storage')
option('SPDLOG_NO_ATOMIC_LEVELS', type : 'boolean', value : false, description : 'prevent spdlog from using of std::atomic log levels (use only if your code never modifies log levels concurrently')
